[gd_scene load_steps=2 format=3 uid="uid://auction001"]

[ext_resource type="Script" path="res://scripts/game/auction_panel.gd" id="1"]

[node name="AuctionPanel" type="PanelContainer"]
visible = false
custom_minimum_size = Vector2(0, 280)
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="AuctionTitle" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="CardDisplayRow" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 8

[node name="Card1Col" type="VBoxContainer" parent="MarginContainer/VBox/CardDisplayRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AuctionCardBar" type="ColorRect" parent="MarginContainer/VBox/CardDisplayRow/Card1Col"]
layout_mode = 2
custom_minimum_size = Vector2(0, 8)
color = Color(1, 1, 1, 1)

[node name="AuctionArtArea" type="ColorRect" parent="MarginContainer/VBox/CardDisplayRow/Card1Col"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
color = Color(0.5, 0.5, 0.5, 0.3)

[node name="ArtistLabel" type="Label" parent="MarginContainer/VBox/CardDisplayRow/Card1Col"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1

[node name="Card2Col" type="VBoxContainer" parent="MarginContainer/VBox/CardDisplayRow"]
layout_mode = 2
size_flags_horizontal = 3
visible = false

[node name="DoubleCardBar" type="ColorRect" parent="MarginContainer/VBox/CardDisplayRow/Card2Col"]
layout_mode = 2
custom_minimum_size = Vector2(0, 8)
color = Color(1, 1, 1, 1)

[node name="DoubleArtArea" type="ColorRect" parent="MarginContainer/VBox/CardDisplayRow/Card2Col"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
color = Color(0.5, 0.5, 0.5, 0.3)

[node name="DoubleArtistLabel" type="Label" parent="MarginContainer/VBox/CardDisplayRow/Card2Col"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1

[node name="AuctionTypeLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1
modulate = Color(0.5, 0.48, 0.45, 1)

[node name="SellerLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="BidInfoLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
horizontal_alignment = 1
theme_override_colors/font_color = Color(0.8, 0.6, 0.1, 1)

[node name="BidInputRow" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 10

[node name="BidInput" type="SpinBox" parent="MarginContainer/VBox/BidInputRow"]
layout_mode = 2
custom_minimum_size = Vector2(180, 50)
min_value = 1.0
max_value = 999.0
step = 1.0
value = 1.0

[node name="BidUnitLabel" type="Label" parent="MarginContainer/VBox/BidInputRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "K"

[node name="ActionRow" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 10

[node name="BidButton" type="Button" parent="MarginContainer/VBox/ActionRow"]
layout_mode = 2
custom_minimum_size = Vector2(130, 55)
theme_override_font_sizes/font_size = 20

[node name="PassButton" type="Button" parent="MarginContainer/VBox/ActionRow"]
layout_mode = 2
custom_minimum_size = Vector2(130, 55)
theme_override_font_sizes/font_size = 20

[node name="AcceptButton" type="Button" parent="MarginContainer/VBox/ActionRow"]
layout_mode = 2
custom_minimum_size = Vector2(130, 55)
theme_override_font_sizes/font_size = 20
visible = false

[node name="SetPriceButton" type="Button" parent="MarginContainer/VBox/ActionRow"]
layout_mode = 2
custom_minimum_size = Vector2(160, 55)
theme_override_font_sizes/font_size = 20
visible = false

[node name="QuickBidRow" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 8

[node name="Bid5K" type="Button" parent="MarginContainer/VBox/QuickBidRow"]
layout_mode = 2
custom_minimum_size = Vector2(80, 45)
text = "+5K"

[node name="Bid10K" type="Button" parent="MarginContainer/VBox/QuickBidRow"]
layout_mode = 2
custom_minimum_size = Vector2(80, 45)
text = "+10K"

[node name="Bid20K" type="Button" parent="MarginContainer/VBox/QuickBidRow"]
layout_mode = 2
custom_minimum_size = Vector2(80, 45)
text = "+20K"

[node name="Bid50K" type="Button" parent="MarginContainer/VBox/QuickBidRow"]
layout_mode = 2
custom_minimum_size = Vector2(80, 45)
text = "+50K"

[node name="ResultLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1
visible = false
